# business-researcher

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/: config.py  main_dev.py
src/business_researcher/: __init__.py  configuration.py  enums.py  researcher.py  schema.py  state.py
src/business_researcher/components/: __init__.py  fact_checker.py  linkedin_finder.py  note_reviewer.py  note_taker.py  query_writer.py  routing.py  utils.py
