[project]
name = "business-researcher"
version = "0.1.0"
description = """
AI-powered business research tool that automates the process of gathering comprehensive information about
professionals and companies using web search and LLM-based analysis
"""
readme = "README.md"
authors = [
    { name = "Bertan Günyel", email = "bertan.gunyel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ai-common @ git+https://github.com/bgunyel/ai-common.git@main",
    "langchain>=0.3.24",
    "langchain-core>=0.3.56",
    "langchain-groq>=0.3.2",
    "langchain-ollama>=0.3.2",
    "langchain-openai>=0.3.16",
    "langgraph>=0.3.34",
    "openai>=1.78.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "rich>=14.0.0",
    "tavily-python>=0.7.0",
]

[project.scripts]
business-researcher = "business_researcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
