[project]
name = "business-researcher"
version = "0.1.0"
description = """
AI-powered business research tool that automates the process of gathering comprehensive information about
professionals and companies using web search and LLM-based analysis
"""
readme = "README.md"
authors = [
    { name = "Bertan Günyel", email = "bertan.gunyel@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ai-common @ git+https://github.com/bgunyel/ai-common.git@main",
    "pydantic-settings==2.11.0",
    "rich==14.2.0",
]

[project.scripts]
business-researcher = "business_researcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
